changing space between el

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Mountain Fuji 🌸</title>
   </head>
   <body>
-    <nav class="navbar sticky-top navbar-expand-lg">
+    <nav class="navbar sticky-top navbar-expand-lg nav nav-underline">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"><img src="logo2.png" alt="logo" /></a>
         <button
@@ -64,7 +64,7 @@
           </div>
           <div>
             <h3 id="content">About</h3>
-            <h2>Fuji: More Than a Mountain</h2>
+            <h2>Fuji: More than a Mountain</h2>
             <p>
               Japan’s Mt. Fuji is an active volcano about 100 kilometers
               southwest of Tokyo. Commonly called “Fuji-san,” it’s the country’s
