--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/702/origina
         </div>
       </div>
     </nav>
-   
-      <header>
-        <h1>Mountain Fuji</h1>
-        <p>.A natural beauty.</p>
 
-        <a href="/#content">Discover</a>
-      </header>
-       <div class="container">
+    <header>
+      <h1>Mountain Fuji</h1>
+      <p>.A natural beauty.</p>
+
+      <a href="/#content">Discover</a>
+    </header>
+    <div class="container">
       <main>
         <section class="grid grid-two-columns">
           <div>
@@ -101,16 +101,108 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/702/origina
 
         <section class="grid grid-two-columns">
           <div>
-            <img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/326/original/image_%2817%29.jpg?1704443647"
-              alt="Mountain Fuji"
-              class="img-responsive"
-            />
+            <div class="container">
+              <div class="mySlides">
+                <div class="numbertext">1 / 6</div>
+                <img
+                  src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/708/original/cherry-blossoms-fuji-mountain-spring-sunrise-shizuoka-japan.jpg?1704715387"
+                  class="img-responsive"
+                />
+              </div>
+
+              <div class="mySlides">
+                <div class="numbertext">2 / 6</div>
+                <img
+                  src="
+https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/327/original/image_%285%29.jpg?1704443653"
+                  class="img-responsive"
+                />
+              </div>
+
+              <div class="mySlides">
+                <div class="numbertext">3 / 6</div>
+                <img
+                  src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/317/original/image_%288%29.jpg?1704443601"
+                  class="img-responsive"
+                />
+              </div>
+
+              <div class="mySlides">
+                <div class="numbertext">4 / 6</div>
+                <img
+                  src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/316/original/image_%2820%29.jpg?1704443596"
+                  class="img-responsive"
+                />
+              </div>
+
+              <div class="mySlides">
+                <div class="numbertext">5 / 6</div>
+                <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/324/original/image_%2815%29.jpg?1704443637" class="img-responsive" />
+              </div>
+
+              <div class="mySlides">
+                <div class="numbertext">6 / 6</div>
+                <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/313/original/image_%2816%29.jpg?1704443582" class="img-responsive" />
+              </div>
+
+              <a class="prev" onclick="plusSlides(-1)">❮</a>
+              <a class="next" onclick="plusSlides(1)">❯</a>
+
+              <div class="caption-container">
+                <p id="caption"></p>
+              </div>
+
+              <div class="row">
+                <div class="column">
+                  <img
+                    class="demo cursor"
+                    src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/708/original/cherry-blossoms-fuji-mountain-spring-sunrise-shizuoka-japan.jpg?1704715387"
+                    onclick="currentSlide(1)"
+                  />
+                </div>
+                <div class="column">
+                  <img
+                    class="demo cursor"
+                    src="
+https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/327/original/image_%285%29.jpg?1704443653"
+                    onclick="currentSlide(2)"
+                  />
+                </div>
+                <div class="column">
+                  <img
+                    class="demo cursor"
+                    src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/317/original/image_%288%29.jpg?1704443601"
+                    onclick="currentSlide(3)"
+                  />
+                </div>
+                <div class="column">
+                  <img
+                    class="demo cursor"
+                    src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/316/original/image_%2820%29.jpg?1704443596"
+                    onclick="currentSlide(4)"
+                  />
+                </div>
+                <div class="column">
+                  <img
+                    class="demo cursor"
+                    src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/324/original/image_%2815%29.jpg?1704443637"
+                    onclick="currentSlide(5)"
+                  />
+                </div>
+                <div class="column">
+                  <img
+                    class="demo cursor"
+                    src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/313/original/image_%2816%29.jpg?1704443582"
+                    onclick="currentSlide(6)"
+                  />
+                </div>
+              </div>
+            </div>
           </div>
           <div>
             <h3 id="content">Mount Fuji Facts</h3>
             <br />
-          
+
             <p>
               1. Mount Fuji is an active volcano.
               <br />
@@ -163,141 +255,82 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/702/origina
             </p>
           </div>
         </section>
-
-        <div class="gallery-box" id="Gallery">
-          <h3 class="text-center">.Gallery.</h3>
-          <h2>Fuji Photography</h2>
-          <div class="grid grid-three-columns">
-            <img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/331/original/image_%2813%29.jpg?1704443693"
-              class="gallery-responsive"
-              alt=""
-            />
-            <img
-              src="
-https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/328/original/image_%2818%29.jpg?1704443665"
-              alt=""
-              class="gallery-responsive"
-            />
-            <img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/325/original/image_%283%29.jpg?1704443643"
-              alt=""
-              class="gallery-responsive"
-            />
-          </div>
-          <div class="grid grid-three-columns">
-            <img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/320/original/image_%2810%29.jpg?1704443617"
-              alt=""
-              class="gallery-responsive"
-            />
-            <img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/319/original/image_%286%29.jpg?1704443610"
-              alt=""
-              class="gallery-responsive"
-            />
-            <img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/318/original/image_%287%29.jpg?1704443604"
-              alt=""
-              class="gallery-responsive"
-            />
-          </div>
-
-          <div id="carouselExampleCaptions" class="carousel slide">
-            <h4>Four Seasons of Fuji: <br />"A Carousel of Nature's Beauty"</h4>
-            <div class="carousel-indicators">
-              <button
-                type="button"
-                data-bs-target="#carouselExampleCaptions"
-                data-bs-slide-to="0"
-                class="active"
-                aria-current="true"
-                aria-label="Slide 1"
-              ></button>
-              <button
-                type="button"
-                data-bs-target="#carouselExampleCaptions"
-                data-bs-slide-to="1"
-                aria-label="Slide 2"
-              ></button>
-              <button
-                type="button"
-                data-bs-target="#carouselExampleCaptions"
-                data-bs-slide-to="2"
-                aria-label="Slide 3"
-              ></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img
-                  src="
-https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/316/original/image_%2820%29.jpg?1704443596"
-                  class="d-block w-100"
-                  alt="Fuji-Autumn"
-                />
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Autumn</h5>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img
-                  src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/327/original/image_%285%29.jpg?1704443653"
-                  class="d-block w-100"
-                  alt="Fuji-Winter"
-                />
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Winter</h5>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img
-                  src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/330/original/image_%2812%29.jpg?1704443684"
-                  class="d-block w-100"
-                  alt="Fuji-Spring"
-                />
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Spring</h5>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img
-                  src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/317/original/image_%288%29.jpg?1704443601"
-                  class="d-block w-100"
-                  alt="Fuji-Summer"
-                />
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Summer</h5>
-                </div>
-              </div>
-            </div>
-            <button
-              class="carousel-control-prev"
-              type="button"
-              data-bs-target="#carouselExampleCaptions"
-              data-bs-slide="prev"
-            >
-              <span
-                class="carousel-control-prev-icon"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button
-              class="carousel-control-next"
-              type="button"
-              data-bs-target="#carouselExampleCaptions"
-              data-bs-slide="next"
-            >
-              <span
-                class="carousel-control-next-icon"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-        </div>
       </main>
-      <footer></footer>
     </div>
+    <section class="gallery-container">
+      <div class="gallery-box" id="Gallery">
+        <h3 class="text-center">.Gallery.</h3>
+        <h2>Fuji Photography</h2>
+        <div class="grid grid-three-columns">
+          <img
+            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/331/original/image_%2813%29.jpg?1704443693"
+            class="gallery-responsive"
+            alt=""
+          />
+          <img
+            src="
+https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/332/original/image_%281%29.jpg?1704443701"
+            alt=""
+            class="gallery-responsive"
+          />
+          <img
+            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/325/original/image_%283%29.jpg?1704443643"
+            alt=""
+            class="gallery-responsive"
+          />
+        </div>
+        <div class="grid grid-three-columns">
+          <img
+            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/320/original/image_%2810%29.jpg?1704443617"
+            alt=""
+            class="gallery-responsive"
+          />
+          <img
+            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/319/original/image_%286%29.jpg?1704443610"
+            alt=""
+            class="gallery-responsive"
+          />
+          <img
+            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/318/original/image_%287%29.jpg?1704443604"
+            alt=""
+            class="gallery-responsive"
+          />
+        </div>
+      </div>
+    </section>
+    <script>
+      let slideIndex = 1;
+      showSlides(slideIndex);
+
+      function plusSlides(n) {
+        showSlides((slideIndex += n));
+      }
+
+      function currentSlide(n) {
+        showSlides((slideIndex = n));
+      }
+
+      function showSlides(n) {
+        let i;
+        let slides = document.getElementsByClassName("mySlides");
+        let dots = document.getElementsByClassName("demo");
+        let captionText = document.getElementById("caption");
+        if (n > slides.length) {
+          slideIndex = 1;
+        }
+        if (n < 1) {
+          slideIndex = slides.length;
+        }
+        for (i = 0; i < slides.length; i++) {
+          slides[i].style.display = "none";
+        }
+        for (i = 0; i < dots.length; i++) {
+          dots[i].className = dots[i].className.replace(" active", "");
+        }
+        slides[slideIndex - 1].style.display = "block";
+        dots[slideIndex - 1].className += " active";
+        captionText.innerHTML = dots[slideIndex - 1].alt;
+      }
+    </script>
   </body>
 </html>
