added the footer and styled it. It's still not done

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
       href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Playfair+Display:wght@700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/3859d9254a.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Mountain Fuji 🌸</title>
   </head>
   <body>
@@ -137,12 +141,18 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/327/origina
 
               <div class="mySlides">
                 <div class="numbertext">5 / 6</div>
-                <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/324/original/image_%2815%29.jpg?1704443637" class="img-responsive" />
+                <img
+                  src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/324/original/image_%2815%29.jpg?1704443637"
+                  class="img-responsive"
+                />
               </div>
 
               <div class="mySlides">
                 <div class="numbertext">6 / 6</div>
-                <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/313/original/image_%2816%29.jpg?1704443582" class="img-responsive" />
+                <img
+                  src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/313/original/image_%2816%29.jpg?1704443582"
+                  class="img-responsive"
+                />
               </div>
 
               <a class="prev" onclick="plusSlides(-1)">❮</a>
@@ -297,6 +307,63 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/332/origina
           />
         </div>
       </div>
+    </section>
+    <footer>
+      <section class="grid grid-two-columns">
+        <div>
+          <h3 class="banner">Visiting Mountain Fuji</h3>
+          <p class="banner-paragraph">
+            Early July to mid September is the official climbing season when the
+            trails and mountain facilities are open.<br />
+            During this period the mountain is usually free of snow, the weather
+            is relatively mild, access by public transportation is easy, <br />
+            and the mountain huts are operating.<br />
+            Anyone without much hiking experience is advised to tackle the
+            mountain during the official climbing season. The specific dates
+            depend on the year and trail. In recent years they have been set as
+            follows:
+          </p>
+        </div>
+        <div>
+          <a href="https://www.japan-guide.com/e/e6901.html" target="_blank"
+            >Learn More</a
+          >
+        </div>
+      </section>
+    </footer>
+    <section>
+      <div class="social-links d-flex justify-content-center mb-5">
+        <a
+          href="https://www.instagram.com/armorofpetals_/"
+          target="_blank"
+          title="Instagram Profile"
+          ><i class="fa-brands fa-instagram" style="color: #000000"></i
+        ></a>
+        <a
+          href="https://www.linkedin.com/in/nadia-bouli/"
+          target="_blank"
+          title="Linkedin Profile"
+          ><i class="fa-brands fa-linkedin-in" style="color: #000000"></i
+        ></a>
+        <a
+          href="https://github.com/NadiasCodes"
+          target="_blank"
+          title="GitHub Profile"
+        >
+          <i class="fa-brands fa-github" style="color: #000000"></i
+        ></a>
+      </div>
+      <p class="text-center mt-4">
+        This project was coded with HTML,CSS & Bootstrap by
+        <a href="https://www.linkedin.com/in/nadia-bouli/" target="_blank"
+          >Nadia Bouli</a
+        >, is open sourced on
+        <a href="https://github.com/NadiasCodes" target="_blank">GitHub</a> &
+        hosted on
+        <a href="https://my-portofolio-project.vercel.app/" target="_blank"
+          >Vercel</a
+        >
+      </p>
     </section>
     <script>
       let slideIndex = 1;
