--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
     <nav class="navbar sticky-top navbar-expand-lg nav nav-underline">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="/index.html"
           ><img
             src="
 https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/702/original/Untitled_design__1_-removebg-preview_%281%29.png?1704701952"
@@ -60,7 +60,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/702/origina
       <h1>Mountain Fuji</h1>
       <p>.A natural beauty.</p>
 
-      <a href="/#content">Discover</a>
+      <a href="/#content" class="button">Discover</a>
     </header>
     <div class="container">
       <main>
@@ -97,7 +97,10 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/702/origina
               image of abundant (富, fu) soldiers (士, shi, ji)[note 1]
               ascending the slopes of the mountain.
             </p>
-            <a href="https://en.wikipedia.org/wiki/Mount_Fuji" target="_blank"
+            <a
+              href="https://en.wikipedia.org/wiki/Mount_Fuji"
+              target="_blank"
+              class="button"
               >Learn More</a
             >
           </div>
@@ -259,7 +262,10 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/327/origina
               <br />
               <br />
 
-              <a href="https://facts.net/mount-fuji-facts/" target="_blank"
+              <a
+                href="https://facts.net/mount-fuji-facts/"
+                target="_blank"
+                class="button"
                 >Learn More</a
               >
             </p>
@@ -273,9 +279,9 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/327/origina
         <h2>Fuji Photography</h2>
         <div class="grid grid-three-columns">
           <img
-            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/331/original/image_%2813%29.jpg?1704443693"
-            class="gallery-responsive"
+            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/703/original/image_%2819%29.jpg?1704702057"
             alt=""
+            class="gallery-responsive"
           />
           <img
             src="
@@ -309,62 +315,60 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/332/origina
       </div>
     </section>
     <footer>
-      <section class="grid grid-two-columns">
+      <div class="banner-box d-flex justify-content-center">
         <div>
-          <h3 class="banner">Visiting Mountain Fuji</h3>
-          <p class="banner-paragraph">
+          <h3 class="banner text-center">Visiting Mountain Fuji</h3>
+          <p class="banner-paragraph text-center">
             Early July to mid September is the official climbing season when the
             trails and mountain facilities are open.<br />
             During this period the mountain is usually free of snow, the weather
-            is relatively mild, access by public transportation is easy, <br />
-            and the mountain huts are operating.<br />
-            Anyone without much hiking experience is advised to tackle the
-            mountain during the official climbing season. The specific dates
-            depend on the year and trail. In recent years they have been set as
-            follows:
+            is relatively mild, access by public transportation is easy, and
+            the<br />mountain huts are operating. Anyone without much hiking
+            experience is advised to tackle the mountain during the official
+            climbing season.<br />
+            The specific dates depend on the year and trail. In recent years
+            they have been set as follows:
           </p>
         </div>
-        <div>
-          <a href="https://www.japan-guide.com/e/e6901.html" target="_blank"
-            >Learn More</a
-          >
-        </div>
-      </section>
-    </footer>
-    <section>
-      <div class="social-links d-flex justify-content-center mb-5">
-        <a
-          href="https://www.instagram.com/armorofpetals_/"
-          target="_blank"
-          title="Instagram Profile"
-          ><i class="fa-brands fa-instagram" style="color: #000000"></i
-        ></a>
-        <a
-          href="https://www.linkedin.com/in/nadia-bouli/"
-          target="_blank"
-          title="Linkedin Profile"
-          ><i class="fa-brands fa-linkedin-in" style="color: #000000"></i
-        ></a>
-        <a
-          href="https://github.com/NadiasCodes"
-          target="_blank"
-          title="GitHub Profile"
-        >
-          <i class="fa-brands fa-github" style="color: #000000"></i
-        ></a>
       </div>
-      <p class="text-center mt-4">
-        This project was coded with HTML,CSS & Bootstrap by
-        <a href="https://www.linkedin.com/in/nadia-bouli/" target="_blank"
-          >Nadia Bouli</a
-        >, is open sourced on
-        <a href="https://github.com/NadiasCodes" target="_blank">GitHub</a> &
-        hosted on
-        <a href="https://my-portofolio-project.vercel.app/" target="_blank"
-          >Vercel</a
+      <div class="banner-button">
+        <a
+          href="https://www.japan-guide.com/e/e6901.html"
+          target="_blank"
+          class="button"
+          >Learn More</a
         >
-      </p>
-    </section>
+      </div>
+    </footer>
+
+    <div class="social-links d-flex justify-content-center mb-3">
+      <a
+        href="https://www.instagram.com/armorofpetals_/"
+        target="_blank"
+        title="Instagram Profile"
+        ><i class="fa-brands fa-instagram" style="color: #000000"></i
+      ></a>
+      <a
+        href="https://www.linkedin.com/in/nadia-bouli/"
+        target="_blank"
+        title="Linkedin Profile"
+        ><i class="fa-brands fa-linkedin-in" style="color: #000000"></i
+      ></a>
+      <a
+        href="https://github.com/NadiasCodes"
+        target="_blank"
+        title="GitHub Profile"
+      >
+        <i class="fa-brands fa-github" style="color: #000000"></i
+      ></a>
+    </div>
+    <div>
+      <h3 class="text-center project-info">
+        This project was coded by <span class="coder">Nadia Bouli</span>
+      </h3>
+      <p class="text-center sheCodes">Student at <a href="https://www.shecodes.io/" target="_blank">SheCodes</a></p>
+    </div>
+
     <script>
       let slideIndex = 1;
       showSlides(slideIndex);
