--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/702/origina
             <img
               src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/315/original/image_%282%29.jpg?1704443592"
               alt="Mountain Fuji"
-              class="img-responsive"
+              class="img-responsive" id="mountain"
             />
           </div>
           <div>
