replaced instagram with vercel

--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/702/origina
             <img
               src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/315/original/image_%282%29.jpg?1704443592"
               alt="Mountain Fuji"
-              class="img-responsive" id="mountain"
+              class="img-responsive"
+              id="mountain"
             />
           </div>
           <div>
@@ -343,10 +344,10 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/332/origina
 
     <div class="social-links d-flex justify-content-center mb-3">
       <a
-        href="https://www.instagram.com/armorofpetals_/"
+        href=""
         target="_blank"
-        title="Instagram Profile"
-        ><i class="fa-brands fa-instagram" style="color: #000000"></i
+        title="Vercel Profile"
+        ><i class="fa-solid fa-pager" style="color: #000000"></i
       ></a>
       <a
         href="https://www.linkedin.com/in/nadia-bouli/"
@@ -366,7 +367,10 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/332/origina
       <h3 class="text-center project-info">
         This project was coded by <span class="coder">Nadia Bouli</span>
       </h3>
-      <p class="text-center sheCodes">Student at <a href="https://www.shecodes.io/" target="_blank">SheCodes</a></p>
+      <p class="text-center sheCodes">
+        Student at
+        <a href="https://www.shecodes.io/" target="_blank">SheCodes</a>
+      </p>
     </div>
 
     <script>
