--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       src="https://kit.fontawesome.com/3859d9254a.js"
       crossorigin="anonymous"
     ></script>
-    <title>Mountain Fuji 🌸</title>
+    <title>Mount Fuji 🌸</title>
   </head>
   <body>
     <nav class="navbar sticky-top navbar-expand-lg nav nav-underline">
@@ -57,7 +57,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/702/origina
     </nav>
 
     <header>
-      <h1>Mountain Fuji</h1>
+      <h1>Mount Fuji</h1>
       <p>.A natural beauty.</p>
 
       <a href="/#content" class="button">Discover</a>
@@ -218,7 +218,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/327/origina
             <br />
 
             <p>
-              1. Mount Fuji is an active volcano.
+              1.Mount Fuji is an active volcano.
               <br />
               <br />
               2.Fuji may look like a solitary mountain, but it’s actually three
@@ -231,7 +231,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/327/origina
               4.Women were not allowed to climb Mount Fuji until 1872.
               <br />
               <br />
-              5. In specific conditions, the mountain is known as Red Fuji,
+              5.In specific conditions, the mountain is known as Red Fuji,
               Diamond Fuji, and Pearl Fuji.
               <br />
               <br />
@@ -241,19 +241,19 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/327/origina
               7.The mountain stands at 3,776 meters or 12,388 feet.
               <br />
               <br />
-              8. Mount Fuji has erupted several times already starting about
+              8.Mount Fuji has erupted several times already starting about
               100,000 years ago.
               <br />
               <br />
-              9. Mount Fuji’s height high is enough to cause altitude sickness
-              to its climbers.
+              9.Mount Fuji’s height high is enough to cause altitude sickness to
+              its climbers.
               <br />
               <br />
-              10. Depending on your skills, climbing Mount Fuji​ can take
-              between 5 to 10 hours.
+              10.Depending on your skills, climbing Mount Fuji​ can take between
+              5 to 10 hours.
               <br />
               <br />
-              11. If Mount Fuji erupts, it can possibly paralyze Tokyo in less
+              11.If Mount Fuji erupts, it can possibly paralyze Tokyo in less
               than 3 hours.
               <br />
               <br />
@@ -343,10 +343,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/332/origina
     </footer>
 
     <div class="social-links d-flex justify-content-center mb-3">
-      <a
-        href=""
-        target="_blank"
-        title="Vercel Profile"
+      <a href="" target="_blank" title="Vercel Profile"
         ><i class="fa-solid fa-pager" style="color: #000000"></i
       ></a>
       <a
