--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
       crossorigin="anonymous"
     ></script>
     <style>
-      @ -1,414 +0,0 @@
       :root {
         --main-color: #e2d7d5;
       }
@@ -41,7 +40,10 @@
       }
 
       header {
-        background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.3)),
+        background-image: linear-gradient(
+            rgba(0, 0, 0, 0.4),
+            rgba(0, 0, 0, 0.3)
+          ),
           url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/333/original/image_%2821%29.jpg?1704443709");
 
         opacity: 0.7;
@@ -431,17 +433,24 @@
           padding: 0 auto;
           margin: 0 auto;
         }
-        .banner{ font-size: 25px;}
-        .banner-paragraph{ font-size: 15px;}
+        .banner {
+          font-size: 25px;
+        }
+        .banner-paragraph {
+          font-size: 15px;
+        }
         .project-info {
-        font-size: 15px;
-      }
-        .coder{font-size: 20px;}
+          font-size: 15px;
+        }
+        .coder {
+          font-size: 20px;
+        }
         .sheCodes {
-        font-size: 15px;}
+          font-size: 15px;
+        }
       }
     </style>
-    <title>Mountain Fuji 🌸</title>
+    <title>Mount Fuji 🌸</title>
   </head>
   <body>
     <nav class="navbar sticky-top navbar-expand-lg nav nav-underline">
