added a smooth transition on the shecodes link

--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
       .sheCodes a {
         text-decoration: none;
         color: #885df1;
+        transition: all 500ms ease-in-out;
       }
       .sheCodes a:hover {
         color: black;
@@ -644,47 +645,47 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/327/origina
             <br />
 
             <p>
-              1.Mount Fuji is an active volcano.
+              1. Mount Fuji is an active volcano.
               <br />
               <br />
-              2.Fuji may look like a solitary mountain, but it’s actually three
+              2. Fuji may look like a solitary mountain, but it’s actually three
               peaks layered on top of one another.
               <br />
               <br />
-              3.The peak is private property.
+              3. The peak is private property.
               <br />
               <br />
-              4.Women were not allowed to climb Mount Fuji until 1872.
+              4. Women were not allowed to climb Mount Fuji until 1872.
               <br />
               <br />
-              5.In specific conditions, the mountain is known as Red Fuji,
+              5. In specific conditions, the mountain is known as Red Fuji,
               Diamond Fuji, and Pearl Fuji.
               <br />
               <br />
-              6.Mount Fuji is Japan’s highest mountain.
+              6. Mount Fuji is Japan’s highest mountain.
               <br />
               <br />
-              7.The mountain stands at 3,776 meters or 12,388 feet.
+              7. The mountain stands at 3,776 meters or 12,388 feet.
               <br />
               <br />
-              8.Mount Fuji has erupted several times already starting about
+              8. Mount Fuji has erupted several times already starting about
               100,000 years ago.
               <br />
               <br />
-              9.Mount Fuji’s height high is enough to cause altitude sickness to
-              its climbers.
+              9. Mount Fuji’s height high is enough to cause altitude sickness
+              to its climbers.
               <br />
               <br />
-              10.Depending on your skills, climbing Mount Fuji​ can take between
-              5 to 10 hours.
+              10. Depending on your skills, climbing Mount Fuji​ can take
+              between 5 to 10 hours.
               <br />
               <br />
-              11.If Mount Fuji erupts, it can possibly paralyze Tokyo in less
+              11. If Mount Fuji erupts, it can possibly paralyze Tokyo in less
               than 3 hours.
               <br />
               <br />
-              12.It became part of the World Heritage List in 2013 as a cultural
-              site.
+              12. It became part of the World Heritage List in 2013 as a
+              cultural site.
 
               <br />
               <br />
