--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/332/origina
     </footer>
 
     <div class="social-links d-flex justify-content-center mb-3">
-      <a href="" target="_blank" title="Vercel Profile"
+      <a href="https://monument-landing-page.vercel.app/" target="_blank" title="Vercel Profile"
         ><i class="fa-solid fa-pager" style="color: #000000"></i
       ></a>
       <a
