adjustments to the footer

--- a/index.html
+++ b/index.html
@@ -345,30 +345,12 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/332/origina
       </div>
     </footer>
 
-    <div class="social-links d-flex justify-content-center mb-3">
-      <a href="https://monument-landing-page.vercel.app/" target="_blank" title="Vercel Profile"
-        ><i class="fa-solid fa-pager" style="color: #000000"></i
-      ></a>
-      <a
-        href="https://www.linkedin.com/in/nadia-bouli/"
-        target="_blank"
-        title="Linkedin Profile"
-        ><i class="fa-brands fa-linkedin-in" style="color: #000000"></i
-      ></a>
-      <a
-        href="https://github.com/NadiasCodes"
-        target="_blank"
-        title="GitHub Profile"
-      >
-        <i class="fa-brands fa-github" style="color: #000000"></i
-      ></a>
-    </div>
-    <div>
+   
       <h3 class="text-center project-info">
         This project was coded by <span class="coder">Nadia Bouli</span>
       </h3>
       <p class="text-center sheCodes">
-        Student at
+        As a part of the "Favorite Monument" challenge at
         <a href="https://www.shecodes.io/" target="_blank">SheCodes</a>
       </p>
     </div>
